[package]
name = "hyper-reverse-proxy"
version = "0.2.1"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "Apache-2.0"
description = "A simple reverse proxy, to be used with Hyper and Tokio."
homepage = "https://github.com/brendanzab/hyper-reverse-proxy"
documentation = "https://docs.rs/hyper-reverse-proxy"
repository = "https://github.com/brendanzab/hyper-reverse-proxy"
keywords = ["http", "hyper"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE",
  "src/**/*"
]

[dependencies]
futures = "0.1.25"
hyper = "0.12.13"
lazy_static = "1.1"
unicase = "2.2"

[dev-dependencies]
error-chain = "0.12.0"
tokio-core = "0.1.17"
tokio-signal = "0.2.6"
